# theia

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
.github/workflows/: ci.yml
apps/: psynth_pipeline.cpp
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  DATA_FORMATS.md  MATH_NOTES.md  QUALITY_GATES.md
include/psynth/: common.hpp  config.hpp  types.hpp
include/psynth/ba/: bundle_adjuster.hpp
include/psynth/features/: sift.hpp
include/psynth/geometry/: batch_ops.hpp  essential.hpp  fundamental.hpp  pnp.hpp  triangulation.hpp
include/psynth/io/: dataset.hpp  export.hpp  serialization.hpp
include/psynth/matching/: matcher.hpp
include/psynth/mvs/: pmvs_export.hpp
include/psynth/sfm/: incremental_sfm.hpp  reconstruction.hpp  tracks.hpp  union_find.hpp
include/psynth/simd/: simd.hpp
scripts/: run_pipeline.sh
src/: config.cpp
src/ba/: bundle_adjuster.cpp
src/features/: sift.cpp
src/geometry/: essential.cpp  fundamental.cpp  pnp.cpp  triangulation.cpp
src/io/: dataset.cpp  export.cpp  serialization.cpp
src/matching/: matcher.cpp
src/mvs/: pmvs_export.cpp
src/sfm/: incremental_sfm.cpp  tracks.cpp
src/viewer/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp  frustum_renderer.cpp  frustum_renderer.hpp  main.cpp  photo_compositor.cpp  photo_compositor.hpp  point_cloud_renderer.cpp  point_cloud_renderer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/viewer/ui/: viewer_ui.cpp  viewer_ui.hpp
